[package]
name = "prim"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "Simple crate to find prime numbers."
homepage = "https://crates.io/crates/prim"
documentation = "https://crates.io"
repository = "https://github.com"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-sqrt = "0.1.5"